# AFP_FinalProject

./: 2-ownership-type-system.md  CLAUDE_CODE_PROMPT.md  Project rubric.md  README.md
afp-emdumitrache-main/: .gitlab-ci.yml  AFPLang.cabal  CODEBASE_WALKTHROUGH.md  DESIGN.md  Makefile  README.md  RUBRIC_MAP.md
afp-emdumitrache-main/app/: Main.hs
afp-emdumitrache-main/examples/: phase0_block.afp  phase0_control.afp  phase0_functions.afp  phase0_mutable.afp  phase1_affine.afp  phase1_ownership.afp  phase2a_lists.afp  phase2b_copy.afp  phase2c_match.afp  phase3a_borrow.afp  phase3b_mut_borrow.afp  phase3c_nll.afp  phase4a_lifetimes.afp  phase4b_spawn.afp  sample.afp
afp-emdumitrache-main/examples/errors/: phase1_error_move.afp  phase2a_error_immutable.afp  phase2b_error_move.afp  phase3a_error_borrow.afp  phase3b_error_exclusivity.afp  phase3c_error_dangle.afp  phase4a_error_lifetime.afp  phase4b_error_spawn.afp
afp-emdumitrache-main/grammar/: Lang.cf
afp-emdumitrache-main/project-instructions-main-report/report/: .gitignore  main.tex  sources.bib
afp-emdumitrache-main/project-instructions-main-report/report/assets/examples/: sample.afp
afp-emdumitrache-main/project-instructions-main-report/report/figures/trules/: expr.tex  prog.tex  stmt.tex
afp-emdumitrache-main/project-instructions-main-report/report/sections/: design.tex  techniques.tex  typing_rules.tex
afp-emdumitrache-main/src/: Context.hs  Env.hs  Eval.hs  Evaluator.hs  Logger.hs  Run.hs  ScopeStack.hs  Tc.hs  Value.hs
afp-emdumitrache-main/src/Interp/: Expr.hs  Prog.hs  Stmt.hs  Stmt.hs-boot
afp-emdumitrache-main/src/TypeCheck/: Expr.hs  Merge.hs  Prog.hs  Stmt.hs
afp-emdumitrache-main/test/: BogusTests.hs  InterpTests.hs  LoggerTests.hs  Main.hs  TypeCheckTests.hs
