cabal-version: 3.0
name:          AFPLang
version:       0.1.1.0

library afp-grammar
    exposed-modules:
        Lang.Abs
        Lang.ErrM
        Lang.Lex
        Lang.Par
        Lang.Print

    hs-source-dirs:   grammar
    default-language: GHC2021
    ghc-options:
    build-tool-depends:
        alex:alex,
        happy:happy
    build-depends:
        base >=4.17 && <4.22,
        array >=0.5.8 && <0.6

library afp-lib
    exposed-modules:
        Run
        Evaluator
        Env
        Value
        Interp.Expr
        Interp.Stmt
        Interp.Prog
        TypeCheck.Expr
        TypeCheck.Stmt
        TypeCheck.Prog

    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -Werror -Werror=incomplete-patterns
    build-depends:
        base >=4.17 && <4.22,
        array >=0.5.8 && <0.6,
        containers >=0.7 && <0.8,
        AFPLang:afp-grammar

executable afp-lang
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Werror -Werror=incomplete-patterns
    build-depends:
        base >=4.17 && <4.22,
        array >=0.5.8.0 && <0.6,
        AFPLang:afp-grammar,
        AFPLang:afp-lib

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        InterpTests
        TypeCheckTests
        BogusTests

    default-language: GHC2021
    ghc-options:      -Werror -Werror=incomplete-patterns
    build-depends:
        base >=4.17 && <4.22,
        array >=0.5.8.0 && <0.6,
        hspec >=2.11.16 && <2.12,
        QuickCheck >=2.17.1.0 && <2.18,
        AFPLang:afp-grammar,
        AFPLang:afp-lib
